--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,16 @@ services:
   app:
     build: .
     volumes:
-      - .:/app
+      - .:/work
     ports:
-      - "8000:8000"
-      - "5000:5000"
-    # tty: trueg
-    command: python /app/Style-Bert-VITS2-JVNW/server_fastapi.py
+      - "7878:7860"
+    tty: true
+    command: python app.py --share --server-name 0.0.0.0
+
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [ gpu ]
